2003-10-28  Jesper Harder  <harder@ifa.au.dk>

	* message.el (message-forward-subject-name-subject)
	(message-forward-subject-author-subject): Decode non-ASCII
	newsgroup names.
	(autoload): Autoload gnus-group-decoded-name.

2003-10-27  Simon Josefsson  <jas@extundo.com>

	* pgg-gpg.el (pgg-gpg-possibly-cache-passphrase): New optional
	parameter key, overrides the key id used to store passphrase
	under (uses true key id from gpg output if nil).
	(pgg-gpg-encrypt-region): Search for passphrase using user suplied
	string STR, instead of (pgg-lookup-key STR t).
	(pgg-gpg-encrypt-region): Store passphrase under user suplied
	string, instead of real key id taken from gpg output.
	(pgg-gpg-decrypt-region): Likewise.
	(pgg-gpg-sign-region): Likewise.
	* pgg.el (pgg-decrypt-region): Don't set pgg-default-user-id.

2003-10-27  Romain FRANCOISE  <romain@orebokech.com>

	* gnus-art.el (gnus-article-goto-prev-page): Doc fix. 

2003-10-27  Simon Josefsson  <jas@extundo.com>

	* mm-bodies.el (mm-body-encoding): Don't use QP when message body
	only consists of short lines and ASCII, when
	mm-use-ultra-safe-encoding.  Refer to 'About foo' thread in
	gnus-bug, e.g. <ilullrg4k7p.fsf@extundo.com>, for more discussion.
	This make it possible to pipe the raw RFC 822 message into 'gpg'
	and have the signature work.  Potential problem: what if message
	contain data that would be dash-escaped by OpenPGP
	implementations? Then PGP 2.x might not be able to parse the raw
	RFC 822 message correctly.  If that problem is worth fixing, it
	should be fixed by detecting the situation, instead of applying QP
	to everything.  Based on discussion with "John A. Martin"
	<jam@jamux.com>.

2003-10-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-mark-spam-as-expired-and-move-routine)
	(spam-ham-copy-or-move-routine): don't ask when deleting copied
	articles, and use move instead of copy when possible
	(spam-split): added the option of specifying a string as a