@@ -1,3 +1,8 @@
+2003-10-29  Simon Josefsson  <jas@extundo.com>
+
+	* message.el (message-forward-make-body-plain): Remove ignored
+	headers.  Tiny patch from Andre Srinivasan <andre@e2open.com>.
+
 2003-10-28  Jesper Harder  <harder@ifa.au.dk>
 
 	* message.el (message-forward-subject-name-subject)
